update MLcode and markdown

--- a/final_project/final_project_runchank_zhengl1.ipynb
+++ b/final_project/final_project_runchank_zhengl1.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -475,22 +475,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# import runtime_path\n",
     "from scipy.stats import randint, uniform\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
-    "# from sklearn.model_selection import RandomizedSearchCV, cross_val_score, train_test_split, GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import svm\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "# from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier"
+    "from sklearn.naive_bayes import GaussianNB"
    ]
   },
   {
@@ -506,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -540,12 +537,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For SVM, we use grid search to find type of kernal, value of gamma and C."
+    "For SVM, we use grid search to find type of kernal."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -555,13 +552,9 @@
     "def svm_search(train_X, train_y, verbose=False):\n",
     "    if verbose:\n",
     "        print('SVM classifier...')\n",
-    "    train_X = train_X / train_X.sum(axis = 0) # normalize data\n",
     "\n",
-    "    clf = svm.SVC(random_state=0, tol=1e-4, max_iter=10000)\n",
-    "    param_dist = {\n",
-    "        'gamma': np.logspace(-3,1,5),\n",
-    "        'kernel': ['linear', 'rbf'],\n",
-    "        'C': [0.1,1,2,3,4,5,6,7,8,9,10]}\n",
+    "    clf = svm.SVC(C = 0.01, gamma = 0.0001, random_state=0, tol=1e-3, max_iter = 10000)\n",
+    "    param_dist = {'kernel': ['linear', 'rbf']}\n",
     "\n",
     "    # hyper params search\n",
     "    search_iters = 30\n",
@@ -589,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -637,36 +630,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def model_contest(X, y):\n",
-    "    # get small data for model selection\n",
-    "#     data = Data()\n",
-    "#     train_X, train_y = data.get_train_set()\n",
-    "#     test_X, test_y = data.get_test_set()\n",
-    "#     scaler = StandardScaler()\n",
-    "#     train_X = scaler.fit_transform(train_X)\n",
-    "#     test_X = scaler.fit_transform(test_X)\n",
-    "    \n",
-    "    scaler = StandardScaler()\n",
-    "    np.random.seed(100)\n",
-    "#     para_X = np.random.randint(100, size=(100,28))\n",
-    "#     para_y = np.random.randint(2, size = (100,))\n",
-    "#     para_X = scaler.fit_transform(para_X)\n",
-    "    \n",
     "\n",
-    "#     train_X = np.random.randint(100, size=(1000,28))\n",
-    "#     train_y = np.random.randint(2, size = (1000,))\n",
-    "#     test_X = np.random.randint(20, size=(100,28))\n",
-    "#     test_y = np.random.randint(2, size = (100,))\n",
-    "#     train_X = scaler.fit_transform(train_X)\n",
-    "#     test_X = scaler.fit_transform(test_X)\n",
     "    \n",
-    "    \n",
+    "    scaler = StandardScaler().fit(X)\n",
+    "    np.random.seed(100)\n",
     "    \n",
     "    n = X.shape[0]\n",
     "    P = np.random.permutation(n)\n",
@@ -677,23 +651,15 @@
     "    test_X = X[P[:-10000],:]\n",
     "    test_y = y[P[:-10000]]\n",
     "    \n",
-    "    para_X = scaler.fit_transform(para_X)\n",
-    "    train_X = scaler.fit_transform(train_X)\n",
-    "    test_X = scaler.fit_transform(test_X)\n",
-    "    \n",
-    "    print(para_X.shape)\n",
-    "    print(para_y.shape)\n",
-    "    print(train_X.shape)\n",
-    "    print(train_y.shape)\n",
-    "    print(test_X.shape)\n",
-    "    print(test_y.shape)\n",
-    "    \n",
-    "    \n",
+    "    para_X = scaler.transform(para_X)\n",
+    "    train_X = scaler.transform(train_X)\n",
+    "    test_X = scaler.transform(test_X)\n",
     "    \n",
     "    # Hyper parameter search for Logistic Regression\n",
     "    lr_params = lr_search(para_X, para_y)\n",
     "    # Hyper parameter search for SVM\n",
-    "#     svm_params = svm_search(para_X, para_y)\n",
+    "    svm_params = svm_search(para_X, para_y, verbose=False)\n",
+    "    print(svm_params)\n",
     "    # Hyper parameter search for Neural Network\n",
     "    nn_params = nn_search(para_X, para_y)\n",
     "    \n",
@@ -701,134 +667,398 @@
     "    nb_model = GaussianNB()\n",
     "    lr_model = LogisticRegression(C=lr_params[\"C\"], dual = lr_params[\"dual\"], \n",
     "                                  max_iter=10000, random_state=0, tol=1e-4)\n",
-    "#     svm_model = svm.SVC(C=svm_params['C'], gamma=svm_params['gamma'], kernel=svm_params['kernel'], \n",
-    "#                         random_state=0, tol=1e-4, max_iter=10000)\n",
+    "    svm_model = svm.SVC(C=0.01, gamma=0.0001, kernel=svm_params['kernel'], \n",
+    "                        random_state=0, tol=1e-3, max_iter=10000)\n",
     "    nn_model = MLPClassifier(alpha=nn_params['alpha'], hidden_layer_sizes=nn_params['hidden_layer_sizes'],\n",
     "                             learning_rate_init=nn_params['learning_rate_init'], \n",
     "                             solver='adam', activation='relu', max_iter=10000)\n",
     "    # Train models\n",
     "    nb_model.fit(train_X, train_y)\n",
     "    lr_model.fit(train_X, train_y)\n",
-    "#     svm_model.fit(train_X, train_y)\n",
+    "    svm_model.fit(train_X, train_y)\n",
     "    nn_model.fit(train_X, train_y)\n",
     "    \n",
-    "#     result = {'NB': nb_model.score(test_X, test_y), 'LR': lr_model.score(test_X, test_y), \n",
-    "#               'SVM': svm_model.score(test_X, test_y), 'NN': nn_model.score(test_X, test_y)}\n",
-    "        \n",
     "    result = {'NB': nb_model.score(test_X, test_y), 'LR': lr_model.score(test_X, test_y), \n",
-    "              'NN': nn_model.score(test_X, test_y)}\n",
-    "    return result\n",
-    "    pass\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('X_data.pickle', 'rb') as f_x:\n",
-    "    X = pickle.load(f_x)\n",
-    "    print(X.shape)\n",
-    "    \n",
-    "with open('y_data.pickle', 'rb') as f_y:\n",
-    "    y = pickle.load(f_y)\n",
-    "    print(y.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "model_contest(X, y)"
+    "              'SVM': svm_model.score(test_X, test_y), 'NN': nn_model.score(test_X, test_y)}\n",
+    "\n",
+    "    return result\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, ... has the highest accuracy over all models. The difference between each model are very small, indicating that this is the best result we can get from these features. The information revealed by these features are not enough for us to increase our accuracy. Here we use the average recent performance to represent how good a team is, which is a very rough estimate. There are many more factors that will affect the result of a game which we didn't consider.\n",
-    "\n",
-    "To get a "
+    "Load the data and run the contest."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open('X_ad3.pickle', 'rb') as f_x:\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(54962, 28)\n",
+      "(54962,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('./processed_data/X_data.pickle', 'rb') as f_x:\n",
+    "    X = pickle.load(f_x)\n",
+    "    print(X.shape)\n",
+    "    \n",
+    "with open('./processed_data/y_data.pickle', 'rb') as f_y:\n",
+    "    y = pickle.load(f_y)\n",
+    "    print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:475: DataConversionWarning: Data with input dtype object was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'kernel': 'linear'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NB</th>\n",
+       "      <td>0.574396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LR</th>\n",
+       "      <td>0.592678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVM</th>\n",
+       "      <td>0.592589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NN</th>\n",
+       "      <td>0.564054</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0\n",
+       "NB   0.574396\n",
+       "LR   0.592678\n",
+       "SVM  0.592589\n",
+       "NN   0.564054"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = model_contest(X, y)\n",
+    "result_df = pd.DataFrame.from_dict(result,orient='index')\n",
+    "result_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, Logistic Regression has the highest accuracy over all models. The difference between each model are very small, indicating that this is the best result we can get from these features. The information revealed by these features are not enough for us to increase our accuracy. Here we use the average recent performance to represent how good a team is, which is a very rough estimate. There are many more factors that will affect the result of a game which we didn't consider.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's load the advanced stats provided by the website. This gives us 30 new features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(54962, 30)\n",
+      "(54962,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('./processed_data/X_ad2.pickle', 'rb') as f_x:\n",
     "    X_ad = pickle.load(f_x)\n",
     "    print(X_ad.shape)\n",
     "    \n",
-    "with open('y_ad3.pickle', 'rb') as f_y:\n",
+    "with open('./processed_data/y_ad2.pickle', 'rb') as f_y:\n",
     "    y_ad = pickle.load(f_y)\n",
     "    print(y_ad.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:475: DataConversionWarning: Data with input dtype object was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'kernel': 'linear'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NB</th>\n",
+       "      <td>0.589231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LR</th>\n",
+       "      <td>0.597416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVM</th>\n",
+       "      <td>0.595681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NN</th>\n",
+       "      <td>0.583026</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0\n",
+       "NB   0.589231\n",
+       "LR   0.597416\n",
+       "SVM  0.595681\n",
+       "NN   0.583026"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = model_contest(X_ad, y_ad)\n",
+    "result_df = pd.DataFrame.from_dict(result,orient='index')\n",
+    "result_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "X_both = np.hstack((X,X_ad))\n",
-    "# X_both = X_both[~np.isnan(X_both).any(axis=1)]\n",
-    "X_both.shape"
+    "We can see that the accuracy doesn't change much. This indicating that the advanced feature doesn't bring know information to the model.\n",
+    "\n",
+    "At this point, we re-considered the way we construct our features. We use the average stats of previous 5 games to represent the team's current status. Now we add one new feature: the number of games that a team has won during this season. The assumption is that if a team wins a lot, it will be more likely to win this time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(54962, 30)\n",
+      "(54962,)\n"
+     ]
+    }
+   ],
    "source": [
-    "model_contest(X_both, y_ad)"
+    "with open('./processed_data/X_ad3.pickle', 'rb') as f_x:\n",
+    "    X_ad3 = pickle.load(f_x)\n",
+    "    print(X_ad.shape)\n",
+    "    \n",
+    "with open('./processed_data/y_ad3.pickle', 'rb') as f_y:\n",
+    "    y_ad3 = pickle.load(f_y)\n",
+    "    print(y_ad.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:475: DataConversionWarning: Data with input dtype object was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'kernel': 'linear'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NB</th>\n",
+       "      <td>0.622726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LR</th>\n",
+       "      <td>0.644544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVM</th>\n",
+       "      <td>0.645367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NN</th>\n",
+       "      <td>0.629109</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0\n",
+       "NB   0.622726\n",
+       "LR   0.644544\n",
+       "SVM  0.645367\n",
+       "NN   0.629109"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = model_contest(X_ad3, y_ad3)\n",
+    "result_df = pd.DataFrame.from_dict(result,orient='index')\n",
+    "result_df"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "As we can see, by adding this one single feature, the accuracy inceased by about 4%, indicating this reature might have a strong relation to prediction."
+   ]
   },
   {
    "cell_type": "code",
@@ -883,7 +1113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
