--- a/final_project/final_project_runchank_zhengl1.ipynb
+++ b/final_project/final_project_runchank_zhengl1.ipynb
@@ -39,17 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import pickle\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import seaborn"
    ]
   },
   {
@@ -1113,7 +1112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
