--- a/final_project/final_project_runchank_zhengl1.ipynb
+++ b/final_project/final_project_runchank_zhengl1.ipynb
@@ -49,7 +49,8 @@
     "import pickle\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import seaborn"
    ]
   },
   {
@@ -1113,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
