--- a/final_project/final_project_runchank_zhengl1.ipynb
+++ b/final_project/final_project_runchank_zhengl1.ipynb
@@ -40,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -1113,13 +1115,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusion\n",
+    "In this project, we shown a basic pipeline of data scraping, feature engineering and data analysis using classical machine learning model. With the simple features in this project our prediction accuracy is far from satisfying. Further explore of the data is needed in order to increase the accuracy. We can also learn from this project that having a deep undertanding of the data and preprocessing strategically is much more important than tuning the machine learning model. After all, it is the data that fundamentally determines the accuracy of the prediction. "
+   ]
   },
   {
    "cell_type": "code",
@@ -1165,7 +1168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
